GitHub Actions and Netlify Update
GitHub Actions:
- Change the Hugo Module Cache Key

Netlify:
- Hugo version update to 0.91.2
- Remove CSP Header for main CSS and JS file
- Change in `Feature-Policy` and `Permissions-Policy` Header
- Add Response Headers for Image and Font files

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -85,9 +85,9 @@ jobs:
       with:
         path: |
           ./cache/modules
-        key: v1-0-hugo-modules-{{ hashFiles('**/go.sum') }}
+        key: v1-1-hugo-modules-{{ hashFiles('**/go.mod') }}-{{ hashFiles('**/go.sum') }}
         restore-keys: | 
-          - v1-0-hugo-modules-{{ hashFiles('**/go.sum') }}
+          - v1-1-hugo-modules-{{ hashFiles('**/go.mod') }}-{{ hashFiles('**/go.sum') }}
 
     - name: Building the Blog HTML
       run: |
