--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -85,9 +85,10 @@ jobs:
       with:
         path: |
           ./cache/modules
-        key: v1-1-hugo-modules-{{ hashFiles('**/go.mod') }}-{{ hashFiles('**/go.sum') }}
+        key: v1-1-hugo-modules-${{ hashFiles('**/go.mod') }}-${{ hashFiles('**/go.sum') }}
         restore-keys: | 
-          - v1-1-hugo-modules-{{ hashFiles('**/go.mod') }}-{{ hashFiles('**/go.sum') }}
+          - v1-1-hugo-modules-${{ hashFiles('**/go.mod') }}-${{ hashFiles('**/go.sum') }}
+          - v1-1-hugo-modules-${{ hashFiles('**/go.mod') }}-
 
     - name: Building the Blog HTML
       run: |
