Disable Emoji Render, Article Updates, Shortcode Fixes, and more
Site Configuration:
- Disable Emoji Shortcode Rendering (Still can Insert emoji, but doesn't using Emoji Shortcodes)
- Development: Add `allow-downloads` in CSP `sandbox` directive
- Development: Add `unsafe-inline` in CSP `script-src` directive

Articles:
- Change How Emojis are Inserted
- Several Article Updates

Shortcodes:
- `bunny-stream`:
   * Fix some Logics
   * Change default embed URI, using `https` as default than `//`
   * Using `default` rather than using `with` and `else` function for declare parameters
   * Using Variables for Shorter and More Readable Codes

- `hugo-version-long`: Adding `isExtended` as alternative to `extended` parameter

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,7 +1,7 @@
 languageCode: id-id
 title: Farrel Franqois Blog
 paginate: 5
-enableEmoji: true
+enableEmoji: false
 enableInlineShortcodes: true
 enableGitInfo: true
 content-dir: content
