--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -37,11 +37,18 @@ markup:
     ordered: true
   highlight:
     noClasses: false
+    codeFences: true
+    guessSyntax: true
+    lineNoStart: 1
+    lineNos: true
+    lineNumbersInTable: true
+    tabWidth: 4
   goldmark:
     renderer:
       unsafe: true
 
 minify:
+  minifyOutput: true
   tdewolff:
     html:
       keepWhitespace: false
