Fix `info` shortcode style and CSP Update

--- a/config/development/server.yaml
+++ b/config/development/server.yaml
@@ -104,10 +104,10 @@ headers:
       'sha256-ipDZNDbPH+CckoD6d3Zx2Hyaz77xp1qPzqu756opmpc=' 'sha256-zIhn2Z/U4FolQnemqH71xHGnWYJFB6I1KeFivza/HlU='
       'sha256-LkfjWGZI7q9qyebTIA+J7AxkmLHJFyWYNusN4dmEQ/g=' 'sha256-+bAo0zJMDNkq2hxubZUYL5yR0baqvY8cuUWvUSGQ+a0=';
       style-src 'self' 'unsafe-hashes' https://cdn.statically.io/gh/dimsemenov/PhotoSwipe/
-      'sha256-OZH/2VZI7GoaSujPVBdMMbawaes1a9/AHCSoQ+n/x7c=' 'sha256-P50WYSNZB+t5bw7NvQOJjx1SOTbBTDThDWu5rHUHV8o='
-      'sha256-rKe1O4wMQqCkLQ9l3ZSM8wXxD+vP+51p1/9Pfuc5GPU=' 'sha256-MbtVhF2YYaQ+jxjj/xmHw3IdSfL/52aKP0AZyGBTmPo='
-      'sha256-De7agAeYqm6ANIVvRRW6HFWi52AJW8inhFE0gSdgXnI=' 'sha256-cx7wkErrQYJFfScmtKFGqmfHLeVOzYvV5AllofiNg3c='
-      'sha256-Z3dYvdAP0SFTVJt0ORc80e1EUQLSlr+DvZ1ZaO9uv6Y=' 'sha256-AN/BwYzHD/GnCad3utJZUlQ8jiR4MDFg5++YjWHDnaQ=';
+      'sha256-FnarH2u08Jf/W3f9wmEwhEwi4IMjsiq4i+lud6zKvH8=' 'sha256-P50WYSNZB+t5bw7NvQOJjx1SOTbBTDThDWu5rHUHV8o='
+      'sha256-MbtVhF2YYaQ+jxjj/xmHw3IdSfL/52aKP0AZyGBTmPo=' 'sha256-rKe1O4wMQqCkLQ9l3ZSM8wXxD+vP+51p1/9Pfuc5GPU='
+      'sha256-De7agAeYqm6ANIVvRRW6HFWi52AJW8inhFE0gSdgXnI=' 'sha256-AN/BwYzHD/GnCad3utJZUlQ8jiR4MDFg5++YjWHDnaQ='
+      'sha256-cx7wkErrQYJFfScmtKFGqmfHLeVOzYvV5AllofiNg3c=' 'sha256-Z3dYvdAP0SFTVJt0ORc80e1EUQLSlr+DvZ1ZaO9uv6Y=';
       font-src 'self';
       img-src data: 'self' https://cdn.statically.io/gh/dimsemenov/PhotoSwipe/;
       base-uri 'self';
@@ -122,3 +122,29 @@ headers:
       worker-src 'none';
       prefetch-src https://cdn.statically.io/;
       sandbox allow-scripts allow-forms allow-same-origin allow-popups allow-top-navigation-by-user-activation allow-downloads
+
+# CSP for main pages
+#- for: /**/**/
+#  values:
+#    Content-Security-Policy: >
+#      default-src 'none';
+#      script-src 'self'
+#      'sha256-waBSrFxedVzyz4KunjBV8Uw/sdoc0MI6pms2+SMfuUA=' 'sha256-t378Diw7bH6ArzR5phdi/cLrELw4CrJElGYbVWVrkm0='
+#      'sha256-kEnxRcBmCK8U+LpFuzFErD1xliPNUJ0XZ+W9PB2NBrI=' 'sha256-k4p5daLoUhxoKIocoQgMS5o6Q+1HkV2Jf/eTs2RnE3c='
+#      'sha256-WiADmDlcjuwMdYHOyAyDISNN2AnlcwCzdq0rNBzQtpU=' 'sha256-ICnaTRSf2f3y7dJdCpLe0w1qeJABvvhgZ35TkqudO6M=';
+#       style-src 'self' 'unsafe-hashes'
+#      'sha256-FnarH2u08Jf/W3f9wmEwhEwi4IMjsiq4i+lud6zKvH8=' 'sha256-P50WYSNZB+t5bw7NvQOJjx1SOTbBTDThDWu5rHUHV8o=';
+#      font-src 'self';
+#      img-src data: 'self';
+#      base-uri 'self';
+#      connect-src 'self';
+#      object-src 'none';
+#      frame-src 'none';
+#      child-src 'none';
+#      media-src 'none';
+#      form-action 'self';
+#      frame-ancestors 'none';
+#      manifest-src 'none';
+#      worker-src 'none';
+#      prefetch-src https://cdn.statically.io/;
+#      sandbox allow-scripts allow-forms allow-same-origin allow-popups
