Article, Page and Theme Updates, Site Improvements, etc.
Theme:
- Main Theme Update
Changelog: https://github.com/CaiJimmy/hugo-theme-stack/compare/0fbbc12...v3.10.0

Modified Theme:
- Refactor Modified Theme to following latest version of Main Theme
- Add styles for Bunny Stream in `custom.scss`
- Remove Style for `:root`

Site Configuration:
- Twemoji version Update to `v14.0.0`
- Remove Home Button from Configuration
- Decrease Profile Avatar Resolution to 100px
- Change how to set widgets

Development Configuration:
- Change hashes in `style-src` and `script-src` CSP directive for Server

Contents:
- Add `_index.md` in `contents` folder for Main Menu/Home Button
- Update on "Tentang" Page
- Update on "Cara memasang ZeroSSL + Renew Otomatis di Netlify dan BunnyCDN" Article
- Update on "Cara menggunakan Termux dari Komputer/Laptop melalui SSH" Article

Requirement:
- Go minimum version change to 1.17

Shortcodes:
- Using Classes instead Inline Style for Bunny Stream Style

Netlify:
- Update Hugo version to v0.95.0

Misc:
- `README.md` Update

--- a/config/_default/menu.yaml
+++ b/config/_default/menu.yaml
@@ -1,10 +1,4 @@
-main:
-  - identifier: home
-    name: Beranda
-    url: /
-    weight: -100
-    params:
-      icon: home
+main: []
 
 social:
   - identifier: github
