--- a/config/development/server.yaml
+++ b/config/development/server.yaml
@@ -97,17 +97,17 @@ headers:
 
     Content-Security-Policy: >
       default-src 'none';
-      script-src 'self' https://giscus.app/client.js https://giscus.app/js/iframeResizer.min.js
-      'sha256-waBSrFxedVzyz4KunjBV8Uw/sdoc0MI6pms2+SMfuUA=' 'sha256-t378Diw7bH6ArzR5phdi/cLrELw4CrJElGYbVWVrkm0='
-      'sha256-kEnxRcBmCK8U+LpFuzFErD1xliPNUJ0XZ+W9PB2NBrI=' 'sha256-k4p5daLoUhxoKIocoQgMS5o6Q+1HkV2Jf/eTs2RnE3c='
-      'sha256-WiADmDlcjuwMdYHOyAyDISNN2AnlcwCzdq0rNBzQtpU=' 'sha256-ICnaTRSf2f3y7dJdCpLe0w1qeJABvvhgZ35TkqudO6M='
-      'sha256-ipDZNDbPH+CckoD6d3Zx2Hyaz77xp1qPzqu756opmpc=' 'sha256-zIhn2Z/U4FolQnemqH71xHGnWYJFB6I1KeFivza/HlU='
-      'sha256-LkfjWGZI7q9qyebTIA+J7AxkmLHJFyWYNusN4dmEQ/g=' 'sha256-+bAo0zJMDNkq2hxubZUYL5yR0baqvY8cuUWvUSGQ+a0=';
-      style-src 'self' 'unsafe-hashes' https://cdn.statically.io/gh/dimsemenov/PhotoSwipe/
-      'sha256-FnarH2u08Jf/W3f9wmEwhEwi4IMjsiq4i+lud6zKvH8=' 'sha256-P50WYSNZB+t5bw7NvQOJjx1SOTbBTDThDWu5rHUHV8o='
-      'sha256-MbtVhF2YYaQ+jxjj/xmHw3IdSfL/52aKP0AZyGBTmPo=' 'sha256-rKe1O4wMQqCkLQ9l3ZSM8wXxD+vP+51p1/9Pfuc5GPU='
-      'sha256-De7agAeYqm6ANIVvRRW6HFWi52AJW8inhFE0gSdgXnI=' 'sha256-AN/BwYzHD/GnCad3utJZUlQ8jiR4MDFg5++YjWHDnaQ='
-      'sha256-cx7wkErrQYJFfScmtKFGqmfHLeVOzYvV5AllofiNg3c=' 'sha256-Z3dYvdAP0SFTVJt0ORc80e1EUQLSlr+DvZ1ZaO9uv6Y=';
+      script-src 'self' 'unsafe-inline' https://giscus.app/client.js https://giscus.app/js/iframeResizer.min.js
+      'sha256-jgys9Z/hlriwC/SULrqh66L7kRPJwGJ3I1TY2J3XzKk=' 'sha256-4V8WxmH+ykIlGiV2pbQGmG3szs7GDgKIdFgCddG6ex0='
+      'sha256-tju0DFy7WnEhM4CjTO67xvil6ERhn1ShrrUxVcTOd50=' 'sha256-34ePYAVhz26TlIIcKtH3N/noQl+FLQA6+etwhntWESI='
+      'sha256-DJEfHiFbpMGtKrEglCcOocyyb8XfWYHJ1qgn1k68uKY=' 'sha256-UU2EmtmMFPPaq+7hVHSxQE4ZqH8bG80sUk5A5Y9oqzY='
+      'sha256-Jgp4ajzqIBclmPp4JeS9/1SZLS8hmgwlIdjo0jHlZSY=' 'sha256-X5Lf3t41J296Jo+QRWSTxJBSKKaCTEPeRX5Mt82Uw4s='
+      'sha256-QFwCnCKYppKaNLFwju258z8VZxIC7AgWBz/fT6DBiO0=' 'sha256-uQYvZ7jHUN+cIjQAMRbluynsmeXw/ZUBGSk2sgOlqLI='
+      'sha256-4naJFnLqBTYs0cgxApgChcIRtIfGe67y8/E7Sa5bsMg=';
+      style-src 'self' 'unsafe-inline' 'unsafe-hashes' https://cdn.statically.io/gh/dimsemenov/PhotoSwipe/
+      'sha256-+4/BiWJSXYAf3wut/+uHw/mJeUaBcpWYYt0PoXVbbgM=' 'sha256-P50WYSNZB+t5bw7NvQOJjx1SOTbBTDThDWu5rHUHV8o='
+      'sha256-AN/BwYzHD/GnCad3utJZUlQ8jiR4MDFg5++YjWHDnaQ=' 'sha256-MbtVhF2YYaQ+jxjj/xmHw3IdSfL/52aKP0AZyGBTmPo='
+      'sha256-rKe1O4wMQqCkLQ9l3ZSM8wXxD+vP+51p1/9Pfuc5GPU=' 'sha256-De7agAeYqm6ANIVvRRW6HFWi52AJW8inhFE0gSdgXnI=';
       font-src 'self';
       img-src data: 'self' https://cdn.statically.io/gh/dimsemenov/PhotoSwipe/;
       base-uri 'self';
@@ -128,12 +128,12 @@ headers:
 #  values:
 #    Content-Security-Policy: >
 #      default-src 'none';
-#      script-src 'self'
-#      'sha256-waBSrFxedVzyz4KunjBV8Uw/sdoc0MI6pms2+SMfuUA=' 'sha256-t378Diw7bH6ArzR5phdi/cLrELw4CrJElGYbVWVrkm0='
-#      'sha256-kEnxRcBmCK8U+LpFuzFErD1xliPNUJ0XZ+W9PB2NBrI=' 'sha256-k4p5daLoUhxoKIocoQgMS5o6Q+1HkV2Jf/eTs2RnE3c='
-#      'sha256-WiADmDlcjuwMdYHOyAyDISNN2AnlcwCzdq0rNBzQtpU=' 'sha256-ICnaTRSf2f3y7dJdCpLe0w1qeJABvvhgZ35TkqudO6M=';
-#       style-src 'self' 'unsafe-hashes'
-#      'sha256-FnarH2u08Jf/W3f9wmEwhEwi4IMjsiq4i+lud6zKvH8=' 'sha256-P50WYSNZB+t5bw7NvQOJjx1SOTbBTDThDWu5rHUHV8o=';
+#      script-src 'self' 'unsafe-inline'
+#      'sha256-jgys9Z/hlriwC/SULrqh66L7kRPJwGJ3I1TY2J3XzKk=' 'sha256-4V8WxmH+ykIlGiV2pbQGmG3szs7GDgKIdFgCddG6ex0='
+#      'sha256-tju0DFy7WnEhM4CjTO67xvil6ERhn1ShrrUxVcTOd50=' 'sha256-34ePYAVhz26TlIIcKtH3N/noQl+FLQA6+etwhntWESI='
+#      'sha256-DJEfHiFbpMGtKrEglCcOocyyb8XfWYHJ1qgn1k68uKY=' 'sha256-UU2EmtmMFPPaq+7hVHSxQE4ZqH8bG80sUk5A5Y9oqzY='
+#       style-src 'self' 'unsafe-inline' 'unsafe-hashes'
+#      'sha256-+4/BiWJSXYAf3wut/+uHw/mJeUaBcpWYYt0PoXVbbgM=' 'sha256-P50WYSNZB+t5bw7NvQOJjx1SOTbBTDThDWu5rHUHV8o=';
 #      font-src 'self';
 #      img-src data: 'self';
 #      base-uri 'self';
