--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -7,7 +7,7 @@ sidebar:
   subtitle: (Bukan) Sekadar Blog Pribadi saya
   avatar:
     local: true
-    resolution: 240
+    resolution: 100
     src: img/profile/avatar.jpg
 
 article:
@@ -28,17 +28,19 @@ footer:
   since: 2019
 
 widgets:
-  enabled:
-    - search
-    - archives
-    - tag-cloud
-    - categories
-  archives:
-    limit: 5
-  tagCloud:
-    limit: 10
-  categoriesCloud:
-    limit: 20
+  homepage:
+    - type: search
+    - type: archives
+      params:
+        limit: 5
+    - type: categories
+      params:
+        limit: 10
+    - type: tag-cloud
+      params:
+        limit: 10
+  page:
+    - type: toc
 
 opengraph:
   twitter:
@@ -65,7 +67,7 @@ imageProcessing:
 twemoji:
   enabled: true
   options:
-    baseURL: /twemoji/13.1.0/
+    baseURL: /twemoji/14.0.0/
     path: svg
     ext: .svg
 
